[package]
name = "masquerade-proxy"
edition = "2021"
version = "0.2.1"
license = "MIT"
keywords = ["masque", "proxy"]
categories = ["network-programming"]
description = "A implementation of MASQUE based on RFC 9114, 9227, 9228 and 9484"
homepage = "https://github.com/ErikBcd/masquerade"
repository = "https://github.com/ErikBcd/masquerade"


[lib]
crate-type = ["lib"]
doctest = false

[dependencies]
log = { version = "0.4.22", features = ["std"] }
env_logger = "0.11.5"
url = "1"

quiche = {version = "0.22.0", features = ["qlog"] }
tokio = { version = "1", features = ["full"] }
ring = "0.17.8"

octets = "0.3"

mio = { version = "1", features = ["net", "os-poll"] }

tun2 = { version = "2", features = ["async"] }
packet = "0.1"

futures = "0.3.30"
clap = {version = "4.5.16", features = ["cargo"] }
toml = "0.8.19"
serde = {version = "1", features = ["derive"]}
kanal = {version = "0.1.0-pre8", features = ["async"]}

[dev-dependencies]
rand = "0.8"
env_logger = "0.11.5"
test-log = "0.2"
